Fix CSS vertical alignment of #status

--- a/public_html/css/default/base.css
+++ b/public_html/css/default/base.css
@@ -79,7 +79,6 @@ a img {
   background-color:   #0072b8;
   padding:            0.3em;
   height:             1em;
-  vertical-align:     top;
 }
 
 #user_name {
